--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "tcli": "./bin/index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -24,5 +29,10 @@
     "clear": "^0.1.0",
     "dotenv": "^16.0.3",
     "inquirer": "^9.1.4"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1",
+    "jest": "^29.3.1"
   }
 }
